# mcp-docs

./: .gitignore  CLAUDE.md  README.md  evaluation.xml  pyproject.toml
.claude/skills/mcp-builder/: SKILL.md
.claude/skills/mcp-builder/reference/: evaluation.md  mcp_best_practices.md  node_mcp_server.md  python_mcp_server.md
.github/: dependabot.yml
.github/workflows/: ci.yml
audits/: securite-anssi-2026-04-09.md
src/mcp_docs/: __init__.py  app.py  client.py  config.py  exceptions.py  models.py  paths.py  resources.py  server.py  session_refresh.py  tools.py  tools_access.py  tools_ai.py  tools_organize.py  tools_sharing.py  yjs_utils.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_app.py  test_client.py  test_config.py  test_models.py  test_session_file.py  test_tools.py  test_tools_access.py  test_tools_ai.py  test_tools_organize.py  test_tools_sharing.py  test_yjs_utils.py
