[project]
name = "mcp-docs"
version = "0.1.0"
description = "MCP server exposing the Docs API (La Suite numérique) to AI agents"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "tenacity>=8.0",
]

[project.scripts]
mcp-docs = "mcp_docs.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "pyright>=1.1",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "pip-audit>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_docs"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
