[project]
name = "mcp-docs"
version = "0.1.0"
description = "MCP server exposing the Docs API (La Suite numérique) to AI agents"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.0",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.26",
]

[project.scripts]
mcp-docs = "mcp_docs.server:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.11",
    "pyright>=1.1.408",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
    "pip-audit>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_docs"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
